--- a/asset/css_home/css/style.css
+++ b/asset/css_home/css/style.css
@@ -448,6 +448,8 @@ a:focus {
 }
 
 .recipe_section .box .img-box img {
+  /* height: 300px; */
+  /* height: 100%; */
   border-radius: 0 45px 0 45px;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
